Add a config option `spoilEverything` to make everything edible spoil [push]
Add a blacklist option for `spoilEverything`
Change the recipes to use a tag instead to reduce the amount of recipe jsons