@@ -9,7 +9,6 @@ import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.event.config.ModConfigEvent;
 import org.apache.commons.lang3.tuple.Pair;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class SpoiledConfig {
@@ -32,6 +31,8 @@ public class SpoiledConfig {
 		public final ConfigValue<List<? extends String>> containerModifier;
 		public final IntValue spoilRate;
 		public final BooleanValue initializeSpoiling;
+		public final BooleanValue spoilEverything;
+		public final ConfigValue<List<? extends String>> spoilEverythingBlacklist;
 		public final IntValue defaultSpoilTime;
 		public final ConfigValue<String> defaultSpoilItem;
 
@@ -48,20 +49,34 @@ public class SpoiledConfig {
 					.comment("Determines the spoilrate in specific containers [Syntax: tileentity:spoil_rate]\n" +
 							"Examples: \"minecraft:shulker_box,0\" would make shulker boxes not spoil food\n" +
 							"\"cookingforblockheads:fridge,0.2\" would make a cooking for blockheads fridge spoil at 20% of the usual spoilrate")
-					.defineList("containerModifier", Arrays.asList(containers), o -> (o instanceof String));
+					.defineListAllowEmpty(List.of("containerModifier"), () -> List.of(containers), o -> (o instanceof String));
 
 			spoilRate = builder
 					.comment("Defines the default amount of seconds in between which the spoiling updates, " +
-							"if this is changed you should update the 'defaultSpoilTime' to accommodate for the extra time [default: 10]")
-					.defineInRange("spoilRate", 10, 1, Integer.MAX_VALUE);
+							"if this is changed you should update the 'defaultSpoilTime' to accommodate for the extra time [default: 30]")
+					.defineInRange("spoilRate", 30, 1, Integer.MAX_VALUE);
 
 			initializeSpoiling = builder
 					.comment("When enabled Spoiled initializes spoiling for all vanilla food")
 					.define("initializeSpoiling", true);
 
+			spoilEverything = builder
+					.comment("When enabled Spoiled makes every edible item spoil into the specified Spoil Item")
+					.define("spoilEverything", false);
+
+			String[] spoilBlacklist = new String[]
+					{
+							"minecraft:rotten_flesh",
+							"minecraft:enchanted_golden_apple"
+					};
+
+			spoilEverythingBlacklist = builder
+					.comment("Defines a list of items that you do not want to spoil when 'spoilEverything' is enabled")
+					.defineListAllowEmpty(List.of("spoilEverythingBlacklist"), () -> List.of(spoilBlacklist), o -> (o instanceof String));
+
 			defaultSpoilTime = builder
-					.comment("Defines the default amount of spoilTime (in second) that is used to initialize Spoiling when 'initializeSpoiling' is enabled")
-					.defineInRange("defaultSpoilTime", 120, 1, Integer.MAX_VALUE);
+					.comment("Defines the default amount of spoilTime (in second) that is used to initialize Spoiling when 'initializeSpoiling' is enabled [default: 40]")
+					.defineInRange("defaultSpoilTime", 40, 1, Integer.MAX_VALUE);
 
 			defaultSpoilItem = builder
 					.comment("Defines the item the foods vanilla foods will turn into when spoiled (if empty it will clear the spoiling item) [default: 'minecraft:rotten_flesh']")
